Remove bottom padding to prevent content 'jump' on scrollbar reveal

--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  padding: 16px 0px 94px 0px;
+  padding: 16px 0px;
   max-width: 874px;
 }
 
@@ -103,7 +103,7 @@
 
 @media only screen and (max-width: 578px) {
   .intro {
-    padding: 16px 12px;
+    padding: 16px 12px 36px 12px;
   }
 
   .mainText {
