--- a/src/styles/Loading.module.css
+++ b/src/styles/Loading.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  padding: 16px 0px 94px 0px;
+  padding: 16px 0px;
   max-width: 874px;
 }
 
@@ -134,7 +134,7 @@
 /* --- Mobile: up to 578px --- */
 @media only screen and (max-width: 578px) {
   .loading {
-    padding: 16px 12px;
+    padding: 16px 12px 36px 12px;
   }
 
   .butterfly {
