--- a/src/styles/Question.module.css
+++ b/src/styles/Question.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  padding: 16px 0px 94px 0px;
+  padding: 16px 0px;
   max-width: 874px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
@@ -68,7 +68,7 @@
 
 @media only screen and (min-width: 578px) and (max-width: 994px) {
   .question {
-    padding: 16px 20px 60px 20px;
+    padding: 16px 20px;
     max-width: 664px;
   }
 
@@ -82,7 +82,7 @@
 
 @media only screen and (max-width: 578px) {
   .question {
-    padding: 16px 12px 60px 12px;
+    padding: 16px 12px 36px 12px;
   }
   .questionContainer {
     gap: 50px;
