--- a/src/styles/Start.module.css
+++ b/src/styles/Start.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  padding: 16px 0px 94px 0px;
+  padding: 16px 0px;
   max-width: 874px;
 }
 
@@ -75,7 +75,7 @@
 /* --- Tablet: 579px to 994px --- */
 @media only screen and (max-width: 994px) {
   .start {
-    padding: 16px 20px 72px 20px;
+    padding: 16px 20px;
     max-width: 664px;
   }
 
@@ -92,7 +92,7 @@
 /* --- Mobile: up to 578px --- */
 @media only screen and (max-width: 578px) {
   .start {
-    padding: 16px 12px 60px 12px;
+    padding: 16px 12px 36px 12px;
   }
 
   .disclaimer {
